--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -18,8 +18,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ${{ inputs.operating-systems }} ]
-        python-version: [ ${{ inputs.python-versions }} ]
+        os: [ "${{ inputs.operating-systems }}" ]
+        python-version: [ "${{ inputs.python-versions }}" ]
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
