--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -11,15 +11,15 @@ on:
         required: false
         type: string
         description: "Comma delimited list of operating systems to test against"
-        default: "ubuntu-latest,macos-latest,windows-latest"
+        default: "[ubuntu-latest,macos-latest,windows-latest]"
 
 jobs:
   test:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ "${{ inputs.operating-systems }}" ]
-        python-version: [ "${{ inputs.python-versions }}" ]
+        os: ${{ fromJSON(inputs.operating-systems) }}
+        python-version: ${{ fromJSON(inputs.python-versions) }}
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
