--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -11,7 +11,7 @@ on:
         required: false
         type: string
         description: "Comma delimited list of operating systems to test against"
-        default: "[ubuntu-latest,macos-latest,windows-latest]"
+        default: "['ubuntu-latest','macos-latest','windows-latest']"
 
 jobs:
   test:
