--- a/.github/workflows/pdoc3.yml
+++ b/.github/workflows/pdoc3.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: ${{ input.python-version }}
+          python-version: ${{ inputs.python-version }}
 
       - name: Configure git for pushing
         shell: bash
