--- a/.github/workflows/markdown-autodocs.yml
+++ b/.github/workflows/markdown-autodocs.yml
@@ -40,6 +40,7 @@ jobs:
       - name: Markdown autodocs
         shell: bash
         run: |
+          pip install .
           ${{ inputs.cmd-to-run }}}
           npm install -g markdown-autodocs
           markdown-autodocs -c code-block -o ${{ inputs.file-to-update }}
