Add a way to use specific refs for steps

--- a/.github/workflows/markdown-autodocs.yml
+++ b/.github/workflows/markdown-autodocs.yml
@@ -14,17 +14,31 @@ on:
       file-to-update:
         type: string
         description: File that we intend to update
+      git-ref:
+        required: false
+        default: ""
+        type: string
+        description: The git ref to build docs on
       operating-system:
         required: true
         type: string
         description: Operating systems to build docs on
+    outputs:
+      git-ref:
+        description: The git ref after any changes were made
+        value: ${{ jobs.markdown-autodocs.outputs.git-ref }}
 
 jobs:
   markdown-autodocs:
     runs-on: ${{ inputs.operating-system }}
+    outputs:
+      git-ref: ${{ steps.doit.outputs.git-ref }}
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: ${{ inputs.git-ref }}
+
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ inputs.python-version }}
@@ -38,6 +52,7 @@ jobs:
       - uses: actions/setup-node@v3
 
       - name: Markdown autodocs
+        id: doit
         shell: bash
         run: |
           pip install .
@@ -47,3 +62,5 @@ jobs:
           git add ${{ inputs.file-to-update }} || true
           git commit -m "Updating readme" || true
           git push origin ${{ github.ref_name }} || true
+
+          echo "git-ref=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
