--- a/.github/workflows/markdown-autodocs.yml
+++ b/.github/workflows/markdown-autodocs.yml
@@ -18,7 +18,7 @@ on:
         required: false
         default: ""
         type: string
-        description: The git ref to build docs on
+        description: The git ref to build on
       operating-system:
         required: true
         type: string
