--- a/.github/workflows/markdown-autodocs.yml
+++ b/.github/workflows/markdown-autodocs.yml
@@ -38,6 +38,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ inputs.git-ref }}
+          fetch-depth: 0
 
       - uses: actions/setup-python@v4
         with:
