--- a/.github/workflows/pdoc3.yml
+++ b/.github/workflows/pdoc3.yml
@@ -31,6 +31,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ inputs.git-ref }}
+          fetch-depth: 0
 
       - uses: actions/setup-python@v4
         with:
