--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -23,6 +23,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ inputs.git-ref }}
+          fetch-depth: 0
 
       - uses: actions/setup-python@v4
 
