--- a/.github/workflows/pdoc3.yml
+++ b/.github/workflows/pdoc3.yml
@@ -10,7 +10,7 @@ on:
       operating-system:
         required: true
         type: string
-        description: Operating systems to build docs on
+        description: Operating system to build docs on
 
 jobs:
   pdoc3:
