try to add caching

--- a/.github/workflows/pyinstaller.yml
+++ b/.github/workflows/pyinstaller.yml
@@ -32,6 +32,8 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ inputs.python-version }}
+          cache: 'pip'
+          cache-dependency-path: setup.py
 
       - name: Build pyinstaller onefile
         id: doit
