--- a/.github/workflows/markdown-autodocs.yml
+++ b/.github/workflows/markdown-autodocs.yml
@@ -31,6 +31,8 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ inputs.python-version }}
+          cache: 'pip'
+          cache-dependency-path: setup.py
 
       - name: Configure git for pushing
         shell: bash
