--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -13,6 +13,8 @@ jobs:
           ref: ${{ github.ref_name }}
 
       - uses: actions/setup-python@v4
+        cache: 'pip'
+        cache-dependency-path: setup.py
 
       - name: Configure git for pushing
         shell: bash
