--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -39,6 +39,10 @@ jobs:
         run: |
           echo "tag=$(git tag --points-at HEAD)" | tee -a $GITHUB_OUTPUT
 
+          # debug code
+          ls -laR
+          pwd
+
       - name: Perform release
         uses: softprops/action-gh-release@v1
         with:
