--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           path: artifacts/
 
-      - name: tag if supposed to
+      - name: tag if supposed to or fetch tags
         shell: bash
         run: |
           if [[ "${{ inputs.tag-to-create }}" != "" ]]; then
@@ -39,13 +39,9 @@ jobs:
         run: |
           echo "tag=$(git tag --points-at HEAD)" | tee -a $GITHUB_OUTPUT
 
-          # debug code
-          ls -laR
-          pwd
-
       - name: Perform release
         uses: softprops/action-gh-release@v1
         with:
           generate_release_notes: true
-          files: artifacts/*
+          files: artifacts/**/*
           tag_name: ${{ steps.get-version-tag.outputs.tag }}
