Handle case where github release is a bit behind head

--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -37,7 +37,7 @@ jobs:
         id: get-version-tag
         shell: bash
         run: |
-          echo "tag=$(git tag --points-at HEAD)" | tee -a $GITHUB_OUTPUT
+          echo "tag=$(git tag --points-at HEAD | git describe --tags --abbrev=0)" | tee -a $GITHUB_OUTPUT
 
       - name: Perform release
         uses: softprops/action-gh-release@v1
