Ensure that we wind up on the latest for this branch.

--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -29,8 +29,9 @@ jobs:
             git tag "${{ inputs.tag-to-create }}"
             git push --tags
           else
-            echo "No tag to create.. instead will fetch tags"
-            git fetch --tags origin
+            echo "No tag to create.. instead will fetch tags/pull"
+            git fetch --all --tags origin
+            git pull --rebase
           fi
 
       - name: Get version tag
