Add dev optional dependency

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -13,6 +13,11 @@ on:
         type: string
         description: JSON-compatible list of operating systems to test against
         default: "['ubuntu-latest','macos-latest','windows-latest']"
+      install-dev-requirements:
+        required: false
+        type: boolean
+        description: Whether to install the 'dev' requirements in addition to its own requirements (and pytest)
+        default: false # only false for compatibility since some projects won't have dev requirements
 
 jobs:
   test:
@@ -31,8 +36,12 @@ jobs:
           cache-dependency-path: setup.py
       - name: Update pip
         run: python -m pip install -U pip
-      - name: Install pytest
+      - name: Install pytest (legacy.. consider adding dev requirements then setting install-dev-requirements to true)
+        if: ${{ ! inputs.install-dev-requirements }}
         run: python -m pip install pytest
+      - name: Install dev dependencies
+        if: ${{ inputs.install-dev-requirements }}
+        run: python -m pip install .[dev]
       - name: Install 'this' requirements
         run: python -m pip install .
       - name: Run pytest
